Require 2.479.3 or newer
* Update plugin parent, bom and jenkins version
* Clean up dependencies
* Upgrade code to Java 17
* Remove deprecations
* Clean up code